--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,21 @@
 .row {
   margin:0 auto 20px;
 }
+.navbar-inverse .navbar-nav .active,
+.navbar-inverse .navbar-nav .active:hover,
+.navbar-inverse .navbar-nav .active:focus {
+  color: #fff;
+  background-color: #080808;
+}
+
+.all-restaurants li {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-top: none;
+}
+.all-restaurants li:first-child {
+  border-top: 1px solid #ddd;
+}
+.all-restaurants li:nth-child(odd) {
+  background-color: #f9f9f9;
+}
