--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
 }
 .nav-tabs .nav-item .nav-link {
   color:#999;
+  cursor:pointer;
+}
+.nav-tabs .nav-item .nav-link.active {
+  color:#495057;
 }
 
 /* Layout styles */
@@ -41,4 +45,10 @@
 }
 .all-restaurants li {
   padding: 10px;
+}
+.restaurant--new::before {
+  content:'New!';
+  color:red;
+  font-size:10px;
+  padding-right:5px;
 }
