--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,54 +1,49 @@
 /* Nav styles */
 .navbar-dark {
-  background:#333;
-}
+  background: #333; }
+
 @media (max-width: 991.98px) {
   .bd-navbar .navbar-nav-scroll {
     max-width: 100%;
     height: 2.5rem;
     margin-top: .25rem;
     overflow: hidden;
-    font-size: .875rem;
-}
+    font-size: .875rem; }
   .bd-navbar .navbar-nav-scroll .navbar-nav {
-      padding-bottom: 2rem;
-      overflow-x: auto;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-  }
-}
+    padding-bottom: 2rem;
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch; } }
+
 .nav-tabs .nav-item .nav-link {
-  color:#999;
-  cursor:pointer;
-}
+  color: #999;
+  cursor: pointer; }
+
 .nav-tabs .nav-item .nav-link.active {
-  color:#495057;
-}
+  color: #495057; }
 
 /* Layout styles */
 .container {
-  margin:40px auto;
-}
+  margin: 40px auto; }
+
 .container .btn {
-  margin:5px;
-}
+  margin: 5px; }
+
 .row {
-  margin:0 auto 20px;
-}
+  margin: 0 auto 20px; }
+
 .button-wrapper {
-  margin-bottom:40px;
-}
+  margin-bottom: 40px; }
 
 /* Component styles */
-#results  {
-  margin:30px auto;
-}
+#results {
+  margin: 30px auto; }
+
 .all-restaurants li {
-  padding: 10px;
-}
+  padding: 10px; }
+
 .restaurant--new::before {
-  content:'New!';
-  color:red;
-  font-size:10px;
-  padding-right:5px;
-}
+  content: 'New!';
+  color: red;
+  font-size: 10px;
+  padding-right: 5px; }
