--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,56 +1,58 @@
 @import 'partials/colors';
 
-/* Nav styles */
+/* Nav styles - bootstrap overrides */
 .navbar-dark {
-    background:$gray;
-  }
-  @media (max-width: 991.98px) {
-    .bd-navbar .navbar-nav-scroll {
+  background:$gray;
+}
+@media (max-width: 991.98px) {
+  .bd-navbar {
+    .navbar-nav-scroll {
       max-width: 100%;
       height: 2.5rem;
       margin-top: .25rem;
       overflow: hidden;
       font-size: .875rem;
-  }
-    .bd-navbar .navbar-nav-scroll .navbar-nav {
+      .navbar-nav {
         padding-bottom: 2rem;
         overflow-x: auto;
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
-    }
+      }
+    }    
   }
-  .nav-tabs .nav-item .nav-link {
-    color:#999;
-    cursor:pointer;
-  }
-  .nav-tabs .nav-item .nav-link.active {
+}
+.nav-tabs .nav-item .nav-link {
+  color:#999;
+  cursor:pointer;
+  &.active {
     color:#495057;
   }
+}
   
-  /* Layout styles */
-  .container {
-    margin:40px auto;
-  }
-  .container .btn {
-    margin:5px;
-  }
-  .row {
-    margin:0 auto 20px;
-  }
-  .button-wrapper {
-    margin-bottom:40px;
-  }
+/* Layout styles */
+.container {
+  margin:40px auto;
+}
+.container .btn {
+  margin:5px;
+}
+.row {
+  margin:0 auto 20px;
+}
+.button-wrapper {
+  margin-bottom:40px;
+}
   
-  /* Component styles */
-  #results  {
-    margin:30px auto;
-  }
-  .all-restaurants li {
-    padding: 10px;
-  }
-  .restaurant--new::before {
-    content:'New!';
-    color:red;
-    font-size:10px;
-    padding-right:5px;
-  }
+/* Component styles */
+#results  {
+  margin:30px auto;
+}
+.all-restaurants li {
+  padding: 10px;
+}
+.restaurant--new::before {
+  content:'New!';
+  color:red;
+  font-size:10px;
+  padding-right:5px;
+}
