--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -1,6 +1,6 @@
-$darkBlue: #333647;
-$tan: #857A76;
-$darkTan: #6C615D;
-$gray: #979899;
-$olive: #8F866D;
-$offWhite: #F7F7F6;
+$darkPurple: #1d132b;
+$darkPurpleLighten10: #372D45;
+$periwinkle: #7B85D5;
+$blue: #2D4DF1;
+$bluePurple: #4C62DB;
+$lightPurple: #E0E1F7;
