--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,9 +1,48 @@
 @import 'partials/colors';
 
-/* Nav styles - bootstrap overrides */
-.navbar-dark {
-  background:$darkBlue;
+// Color palette:
+body {
+  color:$darkPurple;
 }
+a {
+  color:$blue;
+  &:hover {
+    color:$blue;
+  }
+}
+// Top Bar
+.navbar-dark {
+  background:$bluePurple;
+}
+.btn-secondary {
+  background-color:$darkPurple;
+  border-color:$darkPurple;
+  &:hover {
+    background-color:$darkPurpleLighten10;
+    border-color:$darkPurpleLighten10;
+  }
+}
+
+// Main body tabs
+.nav-tabs {
+  background:$lightPurple;
+  .nav-item .nav-link {
+    border:none;  
+    color:$darkPurple;
+    &.active {
+      color:$darkPurple;
+      font-weight:bold;
+    }
+    &:focus,
+    &:hover {
+      border:none;
+      color:$darkPurpleLighten10;
+    }
+  }
+}
+
+
+/* Nav styles - bootstrap overrides */
 .navbar-brand, .navbar-button {
   flex:1;
 }
@@ -13,9 +52,13 @@
 .navbar-nav-scroll {
   flex:2;
 }
-.navbar-nav {
+.nav-tabs {
   justify-content:center;
+  .nav-item .nav-link {
+   cursor:pointer;
+  }
 }
+
 @media (max-width: 991.98px) {
   .bd-navbar {
     .navbar-nav-scroll {
@@ -33,21 +76,12 @@
     }    
   }
 }
-.nav-tabs .nav-item .nav-link {
-  color:#999;
-  cursor:pointer;
-  &.active {
-    color:#495057;
+@media (min-width: 768px) {
+  .navbar-nav {
+    justify-content:center;
   }
 }
-.btn-secondary {
-  background-color:$tan;
-  border-color:$tan;
-  &:hover {
-    background-color:$darkTan;
-    border-color:$darkTan;
-  }
-}
+
   
 /* Layout styles */
 .container {
