Updating colors and font

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,13 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Rubik");
 body {
+  font-family: 'Rubik', sans-serif;
   color: #1d132b; }
 
 a {
-  color: #2D4DF1; }
+  color: #1d132b;
+  font-weight: bold; }
   a:hover {
-    color: #2D4DF1; }
+    color: #1d132b; }
 
 .navbar-dark {
-  background: #4C62DB; }
+  background: #372D45; }
 
 .btn-secondary {
   background-color: #1d132b;
@@ -16,17 +19,21 @@ a {
     background-color: #372D45;
     border-color: #372D45; }
 
+.navbar .nav-link {
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: normal; }
+
 .nav-tabs {
   background: #E0E1F7; }
   .nav-tabs .nav-item .nav-link {
     border: none;
-    color: #1d132b; }
+    color: rgba(29, 19, 43, 0.8); }
     .nav-tabs .nav-item .nav-link.active {
       color: #1d132b;
       font-weight: bold; }
     .nav-tabs .nav-item .nav-link:focus, .nav-tabs .nav-item .nav-link:hover {
       border: none;
-      color: #372D45; }
+      color: #1d132b; }
 
 /* Nav styles - bootstrap overrides */
 .navbar-brand, .navbar-button {
@@ -82,6 +89,6 @@ a {
 
 .restaurant--new::before {
   content: 'New!';
-  color: red;
+  color: #4C62DB;
   font-size: 10px;
   padding-right: 5px; }
